# minecraft-launcher-gtk

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: __init__.py  main.py  navigation.py
src/views/: __init__.py  about.py  avatar.py  home.py  instances.py  main.py  preferences.py
